fix: no toolbar on mobile (#1479)

--- a/studio/src/app/components/editor/deck/actions/app-actions-deck-editor/app-actions-deck-editor.scss
+++ b/studio/src/app/components/editor/deck/actions/app-actions-deck-editor/app-actions-deck-editor.scss
@@ -4,10 +4,6 @@ app-actions-deck-editor {
   background: transparent;
   display: block;
 
-  &.hidden {
-    display: none;
-  }
-
   app-actions-deck,
   app-actions-element {
     &.hidden {
